--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,46 +1,38 @@
-name: Deploy UI (Static Export)
-on:
-  push:
-    branches: [ "main" ]
+name: Deploy UI
+on: [push]
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
       - uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: 'npm'
-          cache-dependency-path: ui/package-lock.json
-
-      - name: Install deps
-        working-directory: ui
+      - name: Install dependencies
         run: npm ci
-
-      - name: Build (static export)
         working-directory: ui
+      - name: Build
         run: npm run build
-
-      - name: Prepare remote symlink to nginx html
+        working-directory: ui
+      - name: Export static site
+        run: npm run export
+        working-directory: ui
+      - name: Rsync out/ to EC2
+        uses: burnett01/rsync-deployments@6.0.0
+        with:
+          switches: -avz --delete
+          path: ui/out/
+          remote_path: /home/ubuntu/ui/
+          remote_host: ${{ secrets.EC2_HOST }}
+          remote_user: ${{ secrets.EC2_USER }}
+          remote_key: ${{ secrets.EC2_SSH_KEY }}
+      - name: Reload Nginx
         uses: appleboy/ssh-action@v1.2.0
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            set -e
-            CID=$(docker ps -q --filter "name=nginx" | head -n1)
-            HTML=$(docker inspect "$CID" --format '{{range .Mounts}}{{if eq .Destination "/usr/share/nginx/html"}}{{.Source}}{{end}}{{end}}')
-            mkdir -p "$HTML"
-            ln -sfn "$HTML" "$HOME/ui"
-
-      - name: Rsync to EC2
-        uses: burnett01/rsync-deployments@5.2
-        with:
-          switches: -avz --delete
-          path: ui/out/
-          remote_path: /home/${{ secrets.EC2_USER }}/ui/
-          remote_host: ${{ secrets.EC2_HOST }}
-          remote_user: ${{ secrets.EC2_USER }}
-          remote_key: ${{ secrets.EC2_SSH_KEY }}
+            CID=$(docker ps -q --filter name=nginx | head -n1)
+            [ -n "$CID" ] && docker exec "$CID" nginx -t && docker exec "$CID" nginx -s reload || true
