--- a/ui/package.json
+++ b/ui/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
-    "export": "next export -o out",
+    "export": "next export",
     "start": "next start"
   },
   "dependencies": {
